<resources>
    <string name="app_name">CatsChat</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <string name="game">Game</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left">◄</string>
    <string name="right">►</string>
    <string name="sign_in_login">Enter login or email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="enter_phone">Enter phone</string>
    <string name="select_avatar">Select avatar</string>
    <string name="phone">Phone</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="email_forgot_password">Enter your email to recover your password</string>
    <string name="enter_birthday">Enter birthday</string>
    <string name="birthday">Birthday</string>
    <string name="enter_login">Enter login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="send">Send</string>
    <string name="new_password">Come up with a password</string>
    <string name="repeat_password">Repeat a password</string>
    <string name="get_code">Get the code</string>
    <string name="enter_name">Enter name</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot password</string>
</resources>