<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.RegistrationFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/avatarTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_avatar"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatarImageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/cat0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button_background"
                    android:text="@string/left"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button_background"
                    android:text="@string/right"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="text" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/phoneTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/phone"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edPhone"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_phone"
                android:inputType="phone" />

            <TextView
                android:id="@+id/userBirthdayTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/birthday"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edUserBirthday"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_birthday"
                android:inputType="date" />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_login"
                android:inputType="text" />

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:textColor="@color/color_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/registrationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/button_background"
                android:text="@string/registration" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>